Fixed arrow layout bug on selected phase

--- a/src/meinberlin/meinberlin/static/stylesheets/scss/components/_context_theme.scss
+++ b/src/meinberlin/meinberlin/static/stylesheets/scss/components/_context_theme.scss
@@ -18,6 +18,10 @@
         &:after {
             border-left-color: $color-background-base-introvert;
         }
+
+        &:before {
+            display: none;
+        }
     }
 
     &.is-current-phase {
